test1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    
spec:
  
  rules:
    - host: kk.info
      http:
        paths:
          - path: /kk
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80

          - path: /pk
            pathType: Prefix
            backend:
              service:
                name: nginx-service2
                port:
                  number: 80
